--- a/src/components/WhatWeDo/WhatWeDo.css
+++ b/src/components/WhatWeDo/WhatWeDo.css
@@ -1,11 +1,15 @@
 
 .what-we-do-section img{
-    width: 90%;
+    width: 80%;
     background-size: cover;
     background-position: center;
     border: 2px solid white;
     border-radius: 50% 20% / 10% 40%;
     box-shadow: 5px 5px 15px rgb(236, 108, 57);
+}
+
+.what-we-do-section img:hover {
+    box-shadow: 5px 5px 15px rgb(28, 147, 221);
 }
 
 .service {
