--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ a {
 
 .ecorise-text {
   text-align: center;
-  margin: 5rem 0 0rem 0;
+  margin: 15rem 0 0rem 0;
 }
 
 .ecorise-text h2 {
@@ -95,20 +95,21 @@ a {
 }
 
 .information-wrapper{
-  background-color: rgba(226, 153, 6, 0.707);
+  background-color: rgba(94, 150, 94, 0.707);
   width: 80%;
   padding: 5rem 0 auto 0;
-  margin-top: 10rem;
-  border-radius: 10px;
+  margin-top: 20rem;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 5px 5px 15px black;
 }
 
 .information-wrapper h4{
+  text-shadow: 1px 1px 2px black;
   font-size: 3rem;
   color: rgb(255, 255, 255);
-  background-color: rgba(255, 119, 0, 0.587);
   padding: 1rem;
   text-align: center;
   border-top-left-radius: 15px;
