--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -6,6 +6,19 @@
     padding: 1rem 0 5rem 0;
     font-family: "Montserrat", sans-serif;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+}
+
+.about-me{
+    display: flex;
+    align-items: center;
+    width: 90%;
+    margin-left: 4rem;
+    background-color: rgba(255, 255, 255, 0.823);
+    border-radius: 5px;
+    padding-bottom: 2rem;
 }
 
 .about h1 {
@@ -15,19 +28,34 @@
 }
 
 .about p{
-    font-size: 1rem;
-    margin: 1rem 2rem 1rem 2rem;
+    font-size: 1.2rem;
+    margin: 1rem 2rem 0rem 2rem;
     color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.92);
+    padding: 1rem;
+    border-radius: 10px;
     text-align:start;
 }
 
 .my-picture img {
     width: 90%;
+    margin-top: 2rem;
     background-size: cover;
     background-position: center;
     box-shadow: 5px 5px 15px black;
 }
 
 @media (max-width: 768px) {
-   
+   .about-me{
+    margin-left: 1.3rem;
+    flex-direction: column;
+   }
+
+   .about h1{
+    font-size: 2rem;
+   }
+
+   .about p{
+    font-size: 1rem;
+   }
 }
