--- a/src/components/RemodelingProcess/RemodelingProcess.css
+++ b/src/components/RemodelingProcess/RemodelingProcess.css
@@ -8,6 +8,7 @@
     background-color: rgb(225, 225, 223);
     border-radius: 10% 30% 50% 70%;
     text-align: center;
+    box-shadow: 5px 5px 35px rgb(246, 181, 1);
 }
 .remodeling-title{
     font-size: 2.5rem;
@@ -55,8 +56,8 @@
     }
 
     .remodeling-title{
-        font-size: 1.5rem;
-        margin-right: 2rem;
+        font-size: 1.3rem;
+        margin-right: 2.5rem;
     }
 
     .remodeling-text{
