--- a/src/components/RemodelingProcess/RemodelingProcess.css
+++ b/src/components/RemodelingProcess/RemodelingProcess.css
@@ -50,7 +50,7 @@
 }
 
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .remodeling-process{
         padding-bottom: 3rem;
     }
@@ -80,4 +80,4 @@
 
 
     
-}
+} */
