--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  max-width: 768px;
   height: auto;
   position: relative;
   overflow-x: hidden;
@@ -51,16 +52,16 @@ a {
   justify-content: center;
   align-items: center;
   overflow-y: auto; /* Ensure scrolling is enabled */
-  padding-top: 0
+  padding-top: 0;
 }
 
-.ecorise-text {
+.neighborhood-text {
   text-align: center;
   margin: 15rem 0 0rem 0;
 }
 
-.ecorise-text h2 {
-  font-size: 5rem;
+.neighborhood-text h2 {
+  font-size: 3rem;
   color: white;
   text-shadow: 1px 1px 2px black;
   font-family: "Montserrat", sans-serif;
@@ -68,7 +69,7 @@ a {
   font-weight: 500;
 }
 
-.ecorise-text h3 {
+.neighborhood-text h3 {
   color: white;
   text-shadow: 1px 1px 2px black;
   font-size: 1.4rem;
@@ -83,7 +84,7 @@ a {
   color: green;
 }
 .house-icon svg {
-  font-size: 7rem;
+  font-size: 5rem;
 }
 
 .house-icon:hover {
@@ -130,7 +131,7 @@ a {
     text-shadow: 1px 1px 2px black;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .ecorise-text{
     margin-top: 10rem;
   }
@@ -155,4 +156,4 @@ a {
         font-size: 1.5rem;
         margin: 1.5rem 0;
     }
-}
+} */
