--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,38 +3,39 @@
     width: 100%;
     text-align: center;
     position: relative;
-    padding: 1rem 0 5rem 0;
     font-family: "Montserrat", sans-serif;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 5rem;
 }
 
 .about-me{
     display: flex;
     align-items: center;
+    flex-direction: column;
     width: 90%;
-    margin-left: 4rem;
     background-color: rgba(255, 255, 255, 0.823);
     border-radius: 5px;
     padding-bottom: 2rem;
 }
 
 .about h1 {
-    font-size: 2.5rem;
+    text-align: center;
+    font-size: 2rem;
     margin: 1rem 0 1rem 0;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .about p{
+    text-align: center;
     font-size: 1.2rem;
     margin: 1rem 2rem 0rem 2rem;
     color: rgb(0, 0, 0);
     background-color: rgba(255, 255, 255, 0.92);
     padding: 1rem;
     border-radius: 10px;
-    text-align:start;
 }
 
 .my-picture img {
