--- a/src/components/RemodelingProcess/RemodelingProcess.css
+++ b/src/components/RemodelingProcess/RemodelingProcess.css
@@ -11,8 +11,9 @@
     box-shadow: 5px 5px 35px rgb(246, 181, 1);
 }
 .remodeling-title{
-    font-size: 2.5rem;
-    margin: 1rem 0;
+    width: 60%;
+    font-size: 1.5rem;
+    margin: 1rem 3rem 1rem 0;
 }
 
 .remodeling-text{
