--- a/src/components/RemodelingProcess/RemodelingProcess.css
+++ b/src/components/RemodelingProcess/RemodelingProcess.css
@@ -7,11 +7,13 @@
     align-items: center;
     background-color: rgb(225, 225, 223);
     border-radius: 10% 30% 50% 70%;
+    padding-bottom: 3rem;
+    padding-left: 1rem;
     text-align: center;
     box-shadow: 5px 5px 35px rgb(246, 181, 1);
 }
 .remodeling-title{
-    width: 60%;
+    width: 70%;
     font-size: 1.5rem;
     margin: 1rem 3rem 1rem 0;
 }
@@ -24,7 +26,7 @@
 }
 
 .remodeling-step{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 600;
     margin: 1rem 0;
 }
@@ -47,7 +49,7 @@
   color: rgb(1, 147, 28);
 }
 .process-icon svg {
-  font-size: 5rem;
+  font-size: 3rem;
 }
 
 
