--- a/src/components/WhatWeDo/WhatWeDo.css
+++ b/src/components/WhatWeDo/WhatWeDo.css
@@ -1,6 +1,6 @@
 
 .what-we-do-section img{
-    width: 80%;
+    width: 90%;
     background-size: cover;
     background-position: center;
     border: 2px solid white;
@@ -13,7 +13,7 @@
 }
 
 .service {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     color: white;
     text-shadow: 1px 1px 2px black;
     margin-top: 1rem;
@@ -25,7 +25,7 @@
     margin: 2rem 0;
     padding: 1rem 2rem;
     border-radius: 25px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 700;
     border: none;
 }
@@ -40,18 +40,26 @@
     margin-bottom: 2rem;
 }
 
-@media (max-width: 768px) {
-    .service{
-        font-size: 1.7rem;
+@media (min-width: 769px) {
+    .what-we-do-section img {
+        width: 90%; /* Increase image width */
+        border-radius: 60% 25% / 15% 45%; /* Adjust border radius */
     }
 
-    .what-we-do-section img{
-        width: 99%;
+    .service {
+        font-size: 2rem; /* Increase service font size */
+        margin-top: 1.5rem; /* Adjust service margin */
     }
 
-    .what-we-do-section button{
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-        margin: 1rem 0;
+    .what-we-do-section button {
+        font-size: 1.2rem; /* Increase button font size */
+        padding: 1.2rem 2.5rem; /* Increase button padding */
+        border-radius: 30px; /* Adjust button border radius */
+    }
+
+    .services-line {
+        width: 60%; /* Adjust line width */
+        margin-bottom: 3rem; /* Increase line margin */
     }
 }
+
