--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 header {
-  
   background: rgba(255, 255, 255, 0.09);
   box-shadow: 0 0 5px black;
-  position: relative; 
-  z-index: 2; 
+  position: relative;
+  z-index: 2;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -17,19 +16,22 @@ header {
 }
 
 .navBar-container .nav-link {
-    flex-direction: column;
-	  justify-content: space-evenly;
-	  align-items: center;
-	  background-color: rgba(255, 255, 255, 0.399);
-	  border-bottom-left-radius: 80px 80px;
-	  box-shadow: 0 0 2px rgba(0, 0, 0, 0.382);
-	  position: absolute;
-	  width: 100px;
-	  height: 30vh;
-	  top: 0px;
-	  right: 0;
-	  z-index: 10;
-  }
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  padding: 0.3rem 0;
+  background-color: rgba(255, 255, 255, 0.399);
+  border-bottom-left-radius: 80px 80px;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.382);
+  position: absolute;
+  width: 100px;
+  height: 25vh;
+  top: 30px;
+  right: 0;
+  z-index: 10;
+  display: none;
+}
 
 .navBar-container nav {
   display: flex;
@@ -37,19 +39,12 @@ header {
   align-items: center;
 }
 
-
 .navBar-container h2 {
   color: white;
   font-size: 1rem;
   cursor: pointer;
 }
 
-.navBar-container .nav-link {
-  text-align: center;
-  display: flex;
-  align-items: center;
-  padding: 0.3rem 0;
-}
 
 .navBar-container .nav-link li {
   list-style: none;
@@ -72,44 +67,49 @@ header {
   font-weight: 600;
 }
 
-
 .sideBar-icon {
   font-size: 1.5rem;
   cursor: pointer;
+}
 
+/* Show when active */
+.nav-link.active {
+  display: block;
 }
 
 
+/* Desktop Styles */
+@media (min-width: 769px) {
+  .navBar-container {
+    max-width: 1440px; /* Adjust max-width for desktop */
+  }
 
+  .navBar-container .nav-link {
+    position: static; /* Remove absolute positioning */
+    display: flex; /* Show navigation links */
+    flex-direction: row; /* Horizontal navigation */
+    background-color: transparent; /* Remove background */
+    box-shadow: none; /* Remove shadow */
+    border-radius: 0; /* Remove border radius */
+    width: auto; /* Allow natural width */
+    height: auto; /* Allow natural height */
+    justify-content: flex-end; /* Align links to the right */
+  }
 
+  .navBar-container .nav-link li {
+    margin: 0 1rem; /* Adjust list item margins */
+  }
 
-/* Styles for screens 1440px and below */
-@media (max-width: 1440px) {
-    .navBar-container {
-        max-width: 1440px; /* Expand container */
-    }
+  .navBar-container ul li a {
+    color: white; /* Change link color for desktop */
+    font-size: 1rem; /* Adjust font size for desktop */
+  }
 
-    .navBar-container .nav-link {
-        position: static; /* Remove absolute positioning */
-        flex-direction: row; /* Horizontal navigation */
-        background-color: transparent; /* Remove background */
-        box-shadow: none; /* Remove shadow */
-        border-radius: 0; /* Remove border radius */
-        width: auto; /* Allow natural width */
-        height: auto; /* Allow natural height */
-        align-items: center;
-        justify-content: flex-end;
-    }
+  .sideBar-icon {
+    display: none; /* Hide hamburger icon on desktop */
+  }
 
-    .navBar-container ul li a {
-        color: white; /* Change link color */
-        font-size: 1rem; /* Increase font size */
-        margin: 0 10px;
-    }
-
-    .sideBar-icon {
-        display: none; /* Hide hamburger on desktop */
-    }
+  .navBar-container h2 {
+    font-size: 1.2rem; /* Increase logo font size for desktop */
+  }
 }
-
-
