--- a/src/components/Free-Estimate/Free-Estimate.css
+++ b/src/components/Free-Estimate/Free-Estimate.css
@@ -67,6 +67,39 @@
     animation: shake 1s ;
 }
 
+.submitted-form-modal-wrapper{
+  width: 80%;
+  background-color: rgba(255, 255, 255, 0.856);
+  padding: 2rem;
+  border-radius: 15px;
+  box-shadow: 5px 10px 10px rgb(16, 157, 37);
+  margin-bottom: 1rem;
+}
+.submitted-form-modal-wrapper h1{
+  margin-bottom: 1rem;
+}
+
+.submitted-form-modal-wrapper h3 {
+  margin-bottom: 1rem;
+  margin-top: 0;
+  color:rgb(32, 119, 3);
+}
+
+.submitted-form-modal-wrapper button {
+  background-color: transparent;
+  border: none;
+  color: rgba(0, 0, 0, 0.345);
+  font-size: 1.2rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.submitted-form-modal-wrapper form {
+  display: flex;
+  justify-content: end;
+  margin-top: -0.5rem;
+}
+
 
 @keyframes shake {
   10%, 90% {
