--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,6 +8,12 @@
     flex-direction: column;
 }
 
+.footer-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .neighborhood-text-footer {
   text-align: center;
   margin: 1rem 0 5rem 0;
@@ -15,7 +21,7 @@
 
 .neighborhood-text-footer h2 {
   font-size: 2rem;
-  color: white;
+  color: rgb(44, 15, 15);
   text-shadow: 1px 1px 2px black;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 0.6rem;
@@ -23,7 +29,7 @@
 }
 
 .neighborhood-text-footer h3 {
-  color: white;
+  color: rgb(44, 15, 15);
   text-shadow: 1px 1px 2px black;
   font-size: 1rem;
   font-family: "Montserrat", sans-serif;
@@ -40,12 +46,38 @@
   font-size: 3rem;
 }
 
-.house-icon-footer:hover {
+.house-icon-footer:hover svg {
   color: rgb(249, 171, 24);
 }
 
-.house-icon-footer:hover svg {
-  color: rgb(249, 171, 24);
+.contact-footer{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 35px;
+    padding: 2rem;
+    box-shadow: 2px 2px 15px black;
+}
+.contact-footer h5 {
+    font-size: 1.5rem;
+    color: black;
+    text-align: center;
+    text-shadow: 1px 1px 2px white;
+}
+.contact-hours{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.process-icon-footer{
+    margin: 1.2rem 1rem 0 0;
+}
+
+.process-icon-footer svg {
+    font-size: 1.5rem;
 }
 
 
@@ -54,12 +86,76 @@
     display: flex;
     justify-content: space-around;
     margin: 2rem 0 2rem 0;
+    background-color: rgba(177, 207, 214, 0.287);
+    padding: 1rem 4rem 1rem 4rem;;
+    border-radius: 5rem;
+    box-shadow: 2px 2px 15px black;
+}
+.socials-f:hover {
+    transform:scale(1.1)
 }
 .socials-f img {
-    width: 2rem;
+    width: 1.5rem;
 }
 
 .socials-f img:hover {
     transform: scale(1.2);
     transition: transform 0.3s;
+}
+
+
+/* Desktop styles */
+@media (min-width: 769px){
+  .footer{
+    padding: 1rem 0 1rem 0;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 2rem;
+  }
+
+  .footer-content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 80%;
+  }
+  .neighborhood-text-footer{
+    width: 30%;
+  }
+  .neighborhood-text-footer h2 {
+    font-size: 1.5rem;
+    margin:0 1rem 0 1rem;
+  }
+
+  .neighborhood-text-footer h3 {
+    font-size: 1rem;
+  }
+
+  .house-icon-footer svg{
+    font-size: 3rem;
+  }
+
+  .contact-footer{
+    width: 70%;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .socials-f{
+    width: 15%;
+    flex-direction: column;
+    border-radius: 0;
+    background-color: transparent;
+    border: none;
+    padding: 0rem;
+    box-shadow: none;
+    margin-left: 2rem;
+    cursor: pointer;
+  }
+
+  .socials-f img{
+    margin-bottom: 1.5rem;
+    width: 2rem;
+  }
 }
