--- a/src/components/RemodelingProcess/RemodelingProcess.css
+++ b/src/components/RemodelingProcess/RemodelingProcess.css
@@ -1,28 +1,28 @@
 .remodeling-process {
     color: rgb(4, 1, 1);
     width: 90%;
-    margin: 1rem 0;
+    margin: 3rem 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgb(225, 225, 223);
-    border-radius: 10% 30% 50% 70%;
+    border-radius: 15px;
     padding-bottom: 3rem;
     padding-left: 1rem;
     text-align: center;
     box-shadow: 5px 5px 35px rgb(246, 181, 1);
 }
 .remodeling-title{
-    width: 70%;
-    font-size: 1.5rem;
-    margin: 1rem 3rem 1rem 0;
+    width: 90%;
+    font-size: 1.8rem;
+    margin: 1rem 0rem 1rem 0;
 }
 
 .remodeling-text{
+    text-align: start;
     font-size: 1.2rem;
     font-weight: 500;
-    width: 85%;
-    margin-right: 3rem;
+    width: 95%;
 }
 
 .remodeling-step{
@@ -56,26 +56,27 @@
 /* Desktop Styles */
 @media (min-width: 769px) {
     .remodeling-process {
-        width: 90%; /* Adjust width for desktop */
-        padding: 3rem; /* Increase padding */
-        border-radius: 15% 35% 55% 75%; /* Adjust border radius */
+        width: 90%; 
+        padding: 3rem; 
+        margin-top: 4rem;
+        border-radius: 15px;
     }
 
     .remodeling-title {
-        font-size: 2rem; /* Increase title font size */
-        margin: 0rem 0 1rem 0; /* Adjust title margin */
+        font-size: 2rem; 
+        margin: 0rem 0 1rem 0; 
         width: 80%;
     }
 
     .remodeling-text {
-        font-size: 1.5rem; /* Increase text font size */
-        width: 100%; /* Increase text width */
+        font-size: 1.5rem; 
+        width: 100%; 
         margin: 1rem 0;
     }
 
     .remodeling-step {
-        font-size: 1.5rem; /* Increase step font size */
-        margin: 1rem 0 2rem 5rem; /* Adjust step margin */
+        font-size: 1.5rem; 
+        margin: 1rem 0 2rem 5rem; 
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -83,17 +84,17 @@
     }
 
     .remodeling-step p:first-of-type {
-        font-size: 2rem; /* Increase first p font size */
+        font-size: 2rem; 
         margin-right: 1rem;
     }
 
     .remodeling-step p:nth-child(3) {
-        font-size: 2rem; /* Increase third p font size */
+        font-size: 2rem; 
         margin-bottom: 0;
         margin-left: 1rem;
     }
 
     .process-icon svg {
-        font-size: 3rem; /* Increase icon size */
+        font-size: 3rem; 
     }
 }
