--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,7 +7,15 @@ header {
   position: relative;
   z-index: 2;
   font-family: "Montserrat", sans-serif;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9999;
+  transition: background-color 0.3s ease-in-out;
 }
+
+
 
 .navBar-container {
   max-width: 768px;
@@ -59,6 +67,7 @@ header {
   padding: 0.5rem 0.7rem;
   display: block;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .navBar-container ul li a:hover,
@@ -71,6 +80,10 @@ header {
 .sideBar-icon {
   font-size: 1.5rem;
   cursor: pointer;
+}
+
+.logo svg {
+  color: green;
 }
 
 /* Show when active */
