--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -65,8 +65,13 @@
 }
 
 @media (min-width: 769px){
+
+    .portfolio-wrapper h1{
+        margin-bottom: 2rem;
+    }
     .our-work {
         width: 30%;
+        margin-top: 1rem;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
         box-shadow: 5px 5px 15px rgb(118, 118, 118);
