--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -52,6 +52,10 @@
     box-shadow: 5px 5px 15px rgb(251, 251, 251);
 }
 
+.projects-modal-wrapper{
+    background-color: black;
+}
+
 @keyframes tilt {
     0% {
         transform: rotate(0deg); 
