--- a/src/components/License-contact/LicenseContact.css
+++ b/src/components/License-contact/LicenseContact.css
@@ -1,5 +1,5 @@
 .contact-bar {
-    background: linear-gradient(to right, rgba(194, 93, 25, 0), #ffffff30);
+    background: linear-gradient(to right, rgba(113, 157, 84, 0), #ffffff30);
     color: white;
     display: flex;
     justify-content:center;
@@ -10,6 +10,7 @@
 
 .license{
     font-weight: 600;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.962);
 }
 .hiring,
 .right-section {
@@ -23,7 +24,7 @@
 /* Desktop Styles */
 @media (min-width: 768px) {
     .contact-bar {
-        background: linear-gradient(to right, rgba(34, 34, 34, 0.652), #d5d5d59a);
+        background: linear-gradient(to right, rgba(86, 116, 181, 0.372), #d5d5d59a);
         margin-top: 3.9rem;
         display: flex;
         justify-content: space-between;
