--- a/src/index.css
+++ b/src/index.css
@@ -151,7 +151,7 @@ a {
   justify-content: center;
   align-items: center;
   padding: 0.8rem 1rem;
-  background-color: rgb(255, 140, 0);
+  background-color: rgba(33, 86, 194, 0.457);
   color: white;
   position: fixed;
   bottom: 0;
@@ -168,6 +168,7 @@ a {
 .absolute-phone-number h6 {
   font-size: 1.5rem;
   font-weight: 500;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.465);
 }
 
 
