--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,6 @@ a {
   justify-content: center;
   align-items: center;
   overflow-y: auto; /* Ensure scrolling is enabled */
-  padding-top: 0;
 }
 
 .neighborhood-text {
@@ -104,6 +103,7 @@ a {
   flex-direction: column;
   align-items: center;
   box-shadow: 5px 5px 15px black;
+  margin-top: 25rem;
 }
 
 .information-wrapper h4{
